# esp32s3_eye_kws_demo

./: .gitignore  CMakeLists.txt  LICENSE  README.md  sdkconfig.defaults
main/: CMakeLists.txt  Kconfig.projbuild  bmp.h  esp32s3_eye_kws_demo.c  fast_grnn.c  fast_grnn.h  fast_rnn.c  fast_rnn.h  fastgrnn_fc_params.h  fastgrnn_rnn0_params.h  fastgrnn_rnn1_params.h  fastrnn_fc_params.h  fastrnn_rnn0_params.h  fastrnn_rnn1_params.h  fbank.c  fbank.h  fc_params.h  rnn0_params.h  rnn1_params.h  sha_rnn_intf.h  speech_nn.h
